# cozyreq

./: .editorconfig  .gitignore  .oxfmtrc.json  AGENTS.md  Cargo.toml  README.md  main.py  mise.toml  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  wireframes.md  zensical.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
apps/api/: pyproject.toml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/web/: package.json
cozyreq/: test_tui.py  tui.py
crates/agent/: Cargo.toml
crates/agent/src/: claude.rs  lib.rs  tools.rs  types.rs
crates/cozyreq/: Cargo.toml
crates/cozyreq/src/: cli.rs  lib.rs  main.rs  tui.rs
crates/cozyreq/src/tui/: mod.rs
crates/cozyreq/src/tui/components/: counter.rs  mod.rs
crates/cozyreq/src/tui/event/: mod.rs
crates/cozyreq/src/tui/model/: mod.rs
crates/cozyreq/src/tui/view/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: events.rs  lib.rs  model.rs  view.rs
crates/tui/src/components/: counter.rs  mod.rs  prompt.rs
crates/tui/tests/: tui_test.rs
crates/tui/tests/snapshots/: tui_test__render_app.snap  tui_test__render_app_after_j_pressed_three_times.snap
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/cozyreq/: agent.py  cli.py  openapi.py
src/cozyreq/tui/: app.py  database.py  models.py  styles.tcss
src/cozyreq/tui/screens/: __init__.py  logs_screen.py  prompt.py  requests.py  tool_calls_screen.py
src/cozyreq/tui/widgets/: __init__.py  log_filter_bar.py  log_table.py  progress_indicator.py  status_badge.py  tool_call_item.py  tool_call_list.py  tool_details_panel.py
supabase/: config.toml
tests/: test_cli.py  test_openapi.py  test_openapi_simple.py
tests/fixtures/: petstore.yaml  user_api.json
tests/tui/: create_sample_db.py  test_app.py  test_database.py  test_models.py
tests/tui/__snapshots__/test_app/: test_app.raw
tests/tui/widgets/: __init__.py  test_log_filter_bar.py  test_log_table.py  test_progress_indicator.py  test_status_badge.py  test_tool_call_item.py  test_tool_call_list.py  test_tool_details_panel.py
