[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "FSL-1.1-ALv2"
authors = ["Jan Ehrhardt <jan.ehrhardt@cozybytes.tech"]
edition = "2024"

[workspace.dependencies]
cozyreq_tui = { path = "crates/tui" }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
