[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "FSL-1.1-ALv2"
authors = ["Jan Ehrhardt <jan.ehrhardt@cozybytes.tech"]
edition = "2024"

[workspace.dependencies]
cozyreq_tui = { path = "crates/tui" }
color-eyre = "0.6.5"
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
