[project]
name = "cozyreq"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=6.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
    "zensical>=0.0.10",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
