[project]
name = "cozyreq"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28.1", "pydantic-ai-slim[mistral]>=1.39.0", "typer>=0.20.1"]

[project.scripts]
cozyreq = "cozyreq.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.14",
    "zensical>=0.0.21",
]

[tool.uv.workspace]
members = ["apps/api"]
