[project]
name = "cozyreq-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["supabase>=2.0.0", "pyjwt>=2.10.0", "fastapi[standard]>=0.128.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
