[package]
name = "cozyreq"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cozyreq_tui.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
