[package]
name = "cozyreq_tui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
color-eyre.workspace = true
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
tui-textarea = "0.7.0"

[dev-dependencies]
insta = "1.45.0"
